Added new functionality

--- a/CertExpertsBot/CertExpertsBot.csproj
+++ b/CertExpertsBot/CertExpertsBot.csproj
@@ -27,4 +27,13 @@
     <PackageReference Include="Telegram.Bot" Version="19.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="TNVEDBotDb.db-shm">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="TNVEDBotDb.db-wal">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
